fix heading positions on small screens

--- a/styles/css/master.css
+++ b/styles/css/master.css
@@ -87,7 +87,8 @@ article {
   /* phones */
   header {
     height: 50em; }
-    header h1 {
+    header h1, header h2 {
+      margin: 0 auto;
       width: 350px; }
 
   article {
