--- a/styles/sass/_mobile.scss
+++ b/styles/sass/_mobile.scss
@@ -12,7 +12,8 @@
     header {
     	height: 50em;
 
-    	h1 {
+    	h1, h2 {
+    		margin: 0 auto;
     		width: 350px;
     	}
     }
